// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InflightQueries renders the component with initial metrics 1`] = `
<div>
  <div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Active queries
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  15
                </b>
              </h2>
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Avg. elapsed time
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  5.93 s
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  (Avg. across 
                  15
                  )
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Longest running query
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  9.57 s
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  ID: 
                  n90fvIkHTVuE3LkB_014
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Total CPU usage
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  9.25 ms
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  (Sum across 
                  15
                  )
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Total memory usage
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  340.66 KB
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  (Sum across 
                  15
                  )
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <h3
              class="euiTitle euiTitle--medium"
            >
              <b>
                Queries by Node
              </b>
            </h3>
            <fieldset
              class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
            >
              <legend
                class="euiScreenReaderOnly"
              >
                Chart Type
              </legend>
              <div
                class="euiButtonGroup__buttons"
              >
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Donut
                      </title>
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Donut"
                      title="Donut"
                    >
                      <input
                        checked=""
                        class="euiScreenReaderOnly"
                        data-test-subj="donut"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Donut
                    </span>
                  </span>
                </label>
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Bar
                      </title>
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Bar"
                      title="Bar"
                    >
                      <input
                        class="euiScreenReaderOnly"
                        data-test-subj="bar"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            class="euiSpacer euiSpacer--xs"
          />
          <div />
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <h3
              class="euiTitle euiTitle--medium"
            >
              <b>
                Queries by Index
              </b>
            </h3>
            <fieldset
              class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
            >
              <legend
                class="euiScreenReaderOnly"
              >
                Chart Type
              </legend>
              <div
                class="euiButtonGroup__buttons"
              >
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Donut
                      </title>
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Donut"
                      title="Donut"
                    >
                      <input
                        checked=""
                        class="euiScreenReaderOnly"
                        data-test-subj="donut"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Donut
                    </span>
                  </span>
                </label>
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Bar
                      </title>
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Bar"
                      title="Bar"
                    >
                      <input
                        class="euiScreenReaderOnly"
                        data-test-subj="bar"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            class="euiSpacer euiSpacer--xs"
          />
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InflightQueries shows 0 when there are no queries 1`] = `
<div>
  <div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Active queries
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  0
                </b>
              </h2>
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m12.877 5.847-1.02 1.02a.5.5 0 0 1-.708-.707l1.1-1.099c-.05-.053-.1-.106-.152-.157A6.471 6.471 0 0 0 8 3.019V4.5a.5.5 0 0 1-1 0V3.019a6.47 6.47 0 0 0-4.261 2.055l1.07 1.071a.5.5 0 0 1-.706.707l-.99-.99A6.46 6.46 0 0 0 1.018 10H2.5a.5.5 0 1 1 0 1H1.174c.083.353.196.697.337 1.03a.5.5 0 1 1-.922.39A7.487 7.487 0 0 1 0 9.5a7.483 7.483 0 0 1 2.197-5.304A7.487 7.487 0 0 1 7.5 2a7.487 7.487 0 0 1 5.304 2.197A7.483 7.483 0 0 1 15 9.5a7.487 7.487 0 0 1-.59 2.92.5.5 0 0 1-.92-.39c.14-.333.253-.677.336-1.03H12.5a.5.5 0 1 1 0-1h1.481a6.483 6.483 0 0 0-1.104-4.153Zm-6.041 5.317a.993.993 0 0 1-.01-1.404c.384-.385 2.882-2.002 3.149-1.735.267.267-1.35 2.765-1.735 3.15a.993.993 0 0 1-1.404-.01Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Avg. elapsed time
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  0
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  (Avg. across 
                  0
                  )
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Longest running query
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  0
                </b>
              </h2>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Total CPU usage
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  0
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  (Sum across 
                  0
                  )
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <div
                class="euiText euiText--small"
              >
                <p>
                  Total memory usage
                </p>
              </div>
              <h2
                class="euiTitle euiTitle--large"
              >
                <b>
                  0
                </b>
              </h2>
              <div
                class="euiText euiText--small"
              >
                <p>
                  (Sum across 
                  0
                  )
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <h3
              class="euiTitle euiTitle--medium"
            >
              <b>
                Queries by Node
              </b>
            </h3>
            <fieldset
              class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
            >
              <legend
                class="euiScreenReaderOnly"
              >
                Chart Type
              </legend>
              <div
                class="euiButtonGroup__buttons"
              >
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Donut
                      </title>
                      <path
                        d="M6.5 9a.5.5 0 0 1-.5-.5V3.023A5.5 5.5 0 1 0 11.978 9H6.5ZM7 8h5.5a.5.5 0 0 1 .5.5A6.5 6.5 0 1 1 6.5 2a.5.5 0 0 1 .5.5V8Zm2-6.972V6h4.972C13.696 3.552 11.448 1.304 9 1.028ZM14.5 7h-6a.5.5 0 0 1-.5-.5v-6a.5.5 0 0 1 .5-.5C11.853 0 15 3.147 15 6.5a.5.5 0 0 1-.5.5ZM6.146 8.854a.5.5 0 1 1 .708-.708l4 4a.5.5 0 0 1-.708.708l-4-4Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Donut"
                      title="Donut"
                    >
                      <input
                        checked=""
                        class="euiScreenReaderOnly"
                        data-test-subj="donut"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Donut
                    </span>
                  </span>
                </label>
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Bar
                      </title>
                      <path
                        d="M8.5 10h-6a.5.5 0 0 1 0-1H8V6H2.5a.5.5 0 0 1 0-1H13V2H2.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H9v3h2.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-9a.5.5 0 1 1 0-1H11v-3H8.5ZM0 .5a.5.5 0 1 1 1 0v14a.5.5 0 1 1-1 0V.5Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Bar"
                      title="Bar"
                    >
                      <input
                        class="euiScreenReaderOnly"
                        data-test-subj="bar"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            class="euiSpacer euiSpacer--xs"
          />
          <div
            class="euiTextAlign euiTextAlign--center"
          >
            <div
              class="euiSpacer euiSpacer--xl"
            />
            <div
              class="euiText euiText--medium"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                <p>
                  No data available
                </p>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--xl"
            />
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <h3
              class="euiTitle euiTitle--medium"
            >
              <b>
                Queries by Index
              </b>
            </h3>
            <fieldset
              class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary"
            >
              <legend
                class="euiScreenReaderOnly"
              >
                Chart Type
              </legend>
              <div
                class="euiButtonGroup__buttons"
              >
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Donut
                      </title>
                      <path
                        d="M6.5 9a.5.5 0 0 1-.5-.5V3.023A5.5 5.5 0 1 0 11.978 9H6.5ZM7 8h5.5a.5.5 0 0 1 .5.5A6.5 6.5 0 1 1 6.5 2a.5.5 0 0 1 .5.5V8Zm2-6.972V6h4.972C13.696 3.552 11.448 1.304 9 1.028ZM14.5 7h-6a.5.5 0 0 1-.5-.5v-6a.5.5 0 0 1 .5-.5C11.853 0 15 3.147 15 6.5a.5.5 0 0 1-.5.5ZM6.146 8.854a.5.5 0 1 1 .708-.708l4 4a.5.5 0 0 1-.708.708l-4-4Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Donut"
                      title="Donut"
                    >
                      <input
                        checked=""
                        class="euiScreenReaderOnly"
                        data-test-subj="donut"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Donut
                    </span>
                  </span>
                </label>
                <label
                  class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
                  for="random_html_id"
                >
                  <span
                    class="euiButtonContent euiButton__content"
                  >
                    <svg
                      aria-labelledby="random_html_id"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title
                        id="random_html_id"
                      >
                        Bar
                      </title>
                      <path
                        d="M8.5 10h-6a.5.5 0 0 1 0-1H8V6H2.5a.5.5 0 0 1 0-1H13V2H2.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H9v3h2.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-9a.5.5 0 1 1 0-1H11v-3H8.5ZM0 .5a.5.5 0 1 1 1 0v14a.5.5 0 1 1-1 0V.5Z"
                      />
                    </svg>
                    <span
                      class="euiButton__text euiButtonGroupButton__textShift"
                      data-text="Bar"
                      title="Bar"
                    >
                      <input
                        class="euiScreenReaderOnly"
                        data-test-subj="bar"
                        id="random_html_id"
                        name="random_html_id"
                        type="radio"
                        value=""
                      />
                      Bar
                    </span>
                  </span>
                </label>
              </div>
            </fieldset>
          </div>
          <hr
            class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
          />
          <div
            class="euiSpacer euiSpacer--xs"
          />
          <div
            class="euiTextAlign euiTextAlign--center"
          >
            <div
              class="euiSpacer euiSpacer--xl"
            />
            <div
              class="euiText euiText--medium"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                <p>
                  No data available
                </p>
              </div>
            </div>
            <div
              class="euiSpacer euiSpacer--xl"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
